--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,27 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<div class="containers">
+  <div class="row-fluid">
+<div class="span12">
+  <%= render 'layouts/header' %>
 
-<%= yield %>
+<div class="row-fluid">
+<div class="span8">
+          <%= yield %>
+
+
+        </div>
+<div class="span4">.df..
+
+
+
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 
 </body>
 </html>
