--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -121,3 +121,11 @@ nav ul li a:hover {
     font-size: 12px;
     list-style: square;
 }
+ /* Users */
+ul.users {
+    margin-top: 1em;
+}
+
+.users li {
+    list-style: none;
+}
