--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,7 +3,9 @@
 
   <ul>
     <% if signed_in? %>
+        <%= link_to "Users", users_path %>
         <%= link_to "Profile", current_user %>
+        <%= link_to "Settings", edit_user_path(current_user) %>
     <% end %>
     <a href="/">Home</a>
     <a href="/page/about">About</a>
