--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,4 @@
-<h4>Sign up</h4>
+<h1>Edit user</h1>
 
 <%= form_for(@user) do |f| %>
     <%= render 'service/error_messages', :object => f.object %>
@@ -19,8 +19,6 @@
       <%= f.password_field :password_confirmation %>
     </div>
     <div class="actions">
-      <%= f.submit "Sign up" %>
+      <%= f.submit "Update" %>
     </div>
-
-
 <% end %>
