--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,6 +2,9 @@
 <%= will_paginate %>
 <ul class="users">
   <% @users.each do |user| %>
+      <div class="image_user_all">
+        <%= image_tag user.image_url.to_s%>
+      </div>
       <li>
         <%= user.email %> ,
         <%= link_to user.name, user %>
