--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -9,6 +9,10 @@
         <%= user.email %> ,
         <%= link_to user.name, user %>
       </li>
+      <% if current_user.admin? %>
+          | <%= link_to "delete", user, :method => :delete, :confirm => "You sure?",
+                        :title => "Delete #{user.name}" %>
+      <% end %>
   <% end %>
 </ul>
 <%= will_paginate %>
