--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -143,3 +143,29 @@ ul.users {
     width: 200px;
     height: 200px;
 }
+
+/* mini_profile */
+.image_mini_profile{
+    width: 90px;
+    height: 70px;
+
+}
+.mini_profile {
+    width: 245px;
+    height: 160px;
+    border-radius: 7px;
+    margin-right: 15px;
+
+}
+/* Buttons mini_profile */
+.button_mini_profile {
+    width: 268;
+    height: 70;
+    margin-left: 30px;
+
+}
+.button_signin{
+    width: 268;
+    height: 70;
+margin-left: 65px;
+}
