--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -9,7 +9,6 @@ body {
 p, ol, ul, td {
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
-  line-height: 18px;
 }
 
 pre {
@@ -19,13 +18,12 @@ pre {
 }
 
 a {
-  color: #000;
   &:visited {
-    color: #666;
+    color: #87ceeb;
   }
   &:hover {
-    color: #fff;
-    background-color: #000;
+    color: #000000;
+
   }
 }
 
