--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,15 +1,10 @@
 <header>
-
-
   <ul>
     <% if signed_in? %>
-        <%= link_to "Users", users_path %>
-        <%= link_to "Profile", current_user %>
-        <%= link_to "Settings", edit_user_path(current_user) %>
+        <% if current_user.admin? %>
+        <%= link_to "Admin page", admin_path %>
+         <% end %>
     <% end %>
-    <a href="/">Home</a>
-    <a href="/page/about">About</a>
-    <a href="/page/help">help</a>
     <a href="/page/contact">Contact</a>
   </ul>
 </header>
