--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,16 +1,20 @@
 <% @posts.each do |post| %>
 
+
     <blockquote>
 
-      <em><%= post.created_at %></em>
 
-      <p><%=link_to post.title, post,%></p>
+      <p><%=link_to post.title, post%></p>
 
 
       <small><%= truncate(strip_tags(post.idea), length: 80)  %></small>
 
     </blockquote>
-
+    <% if current_user.admin? %>
+        | <%= link_to "delete", post, :method => :delete, :confirm => "You sure?",
+                      :title => "Delete #{post.idea}" %>
+    <% end %>
 <% end %>
-
+<% if current_user.admin? %>
 <%= link_to 'New Post', new_post_path %>
+ <% end %>
