--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -14,7 +14,9 @@
   <%= @post.idea %>
 </p>
 
-
-
+<% if signed_in? %>
+<% if current_user.admin? %>
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
+        <% end %>
+<% end %>
