--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -9,6 +9,7 @@ body {
 p, ol, ul, td {
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
+  line-height: 18px;
 }
 
 pre {
@@ -18,12 +19,13 @@ pre {
 }
 
 a {
+  color: #000;
   &:visited {
-    color: #87ceeb;
+    color: #666;
   }
   &:hover {
-    color: #000000;
-
+    color: #fff;
+    background-color: #000;
   }
 }
 
