--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -14,6 +14,10 @@
   <%= @post.idea %>
 </p>
 
+
+      <%= render 'service/comments' %>
+<%= render "service/form_comments" %>
+
 <% if signed_in? %>
 <% if current_user.admin? %>
 <%= link_to 'Edit', edit_post_path(@post) %> |
