--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -140,9 +140,11 @@ ul.users {
 
 /* Post */
 .image_post{
-    width: 200px;
+    width: 250px;
     height: 200px;
+    margin-left: 10px;
 }
+
 
 /* mini_profile */
 .image_mini_profile{
@@ -189,4 +191,18 @@ margin-left: 65px;
 }
 .form_comment{
     margin-left: 7px;
+}
+/* post text */
+.title{
+    margin-left: 7px;
+}
+.text{
+    margin-left: 7px;
+}
+/* share */
+.like{
+    margin-left: 7px;
+}
+.share{
+    margin-left: 450px;
 }
