--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -218,8 +218,8 @@ a:hover {
 }
 .span8 {
   width: 620px;
-    background-color: #faebd7;
-    border-radius: 10px;
+    background-color: windowframe;
+    border-radius: 16px;
 }
 .span7 {
   width: 540px;
@@ -232,7 +232,7 @@ a:hover {
 }
 .span4 {
   width: 300px;
-    background-color: #add8e6;
+    background-color:  windowframe;
     border-radius: 7px;
 }
 .span3 {
