--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,60 +10,67 @@
 <body>
 <div class="containers">
   <div class="row-fluid">
-<div class="span12">
-  <%= render 'layouts/header' %>
-<div class="row-fluid">
-<div class="span8">
-  <ul class="breadcrumb">
-    <li>
-      <a href="/">Home</a> <span class="divider">/</span>
-    </li>
-    <li>
-      <a href="#">Photo Gallery</a> <span class="divider">/</span>
-    </li>
-    <li>
-      <a href="/page/help">Help</a> <span class="divider">/</span>
-    </li>
-    <li>
-      <a href="/page/about">About Me</a> <span class="divider">/</span>
-    </li>
+    <div class="span12">
+      <%= render 'layouts/header' %>
+      <div class="row-fluid">
+        <div class="span8">
+          <ul class="breadcrumb">
+            <li>
+              <a href="/">Home</a> <span class="divider">/</span>
+            </li>
+            <li>
+              <a href="#">Photo Gallery</a> <span class="divider">/</span>
+            </li>
+            <li>
+              <a href="/page/help">Help</a> <span class="divider">/</span>
+            </li>
+            <li>
+              <a href="/page/about">About Me</a> <span class="divider">/</span>
+            </li>
 
-  </ul>
+          </ul>
 
-  <% flash.each do |key, value| %>
-      <div class="flash <%= key %>"><%= value %></div>
-  <% end %>
+          <% flash.each do |key, value| %>
+              <div class="flash <%= key %>"><%= value %></div>
+          <% end %>
 
           <%= yield %>
 
 
-</div>
-<div class="span4">
-  <% if signed_in? %>
-      <% @user = current_user %>
-    <%= render 'layouts/mini_profile' %>
-    <% else %>
-      <div class="well">
-        <blockquote>
-          <div class="button_mini_profile">
-            <a class="btn btn-large" href="/signup">Sign up now!</a>
-          </div>
-          <small>f you dont have a profile on the my blog, you can created by clicking on the button "Sign up now"!</small>
-        </blockquote>
-        <blockquote>
-          <div class="button_signin">
-            <a class="btn btn-info" href="/signin">Sign in!</a>
-          </div>
-          <small>f you have account on my blog, you can by clicking on the button "Sign in"!</small>
-        </blockquote>
-      </div>
-      <% end %>
+        </div>
+        <div class="span4">
+          <% if signed_in? %>
+              <% @user = current_user %>
+              <%= render 'layouts/mini_profile' %>
+          <% else %>
+              <div class="well">
+                <blockquote>
+                  <div class="button_mini_profile">
+                    <a class="btn btn-large" href="/signup">Sign up now!</a>
+                  </div>
+                  <small>f you dont have a profile on the my blog, you can created by clicking on the button "Sign up now"!</small>
+                </blockquote>
+                <blockquote>
+                  <div class="button_signin">
+                    <a class="btn btn-info" href="/signin">Sign in!</a>
+                  </div>
+                  <small>f you have account on my blog, you can by clicking on the button "Sign in"!</small>
+                </blockquote>
+              </div>
+          <% end %>
         </div>
       </div>
     </div>
   </div>
 </div>
-
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s); js.id = id;
+    js.src = "//connect.facebook.net/ru_RU/all.js#xfbml=1";
+    fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 
 </body>
 </html>
