--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,10 @@
             <li>
               <a href="/page/about">About Me</a> <span class="divider">/</span>
             </li>
+            <li>
+              <%= link_to 'Questions', questions_path %><span class="divider">/</span>
+            </li>
+
 
           </ul>
 
