--- a/app/views/admin/admin.html.erb
+++ b/app/views/admin/admin.html.erb
@@ -3,7 +3,8 @@
   <p>Welcom to admin page tis blog.</p>
   <small>Hence you can manage blog. </small>
   <%= link_to 'Add post', new_post_path %>  <br/>
-  <%= link_to 'Users list', users_path %>
+  <%= link_to 'Users list', users_path %> <br/>
+  <%= link_to 'Your Asks', questions_path %>
 
 
 
