--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -218,3 +218,11 @@ margin-left: 65px;
 .delete{
     margin-left: 470px;
 }
+/* Search */
+.search{
+    margin-left: 245px;
+}
+.button{
+    margin-top: -38px;
+    margin-left: 225px;
+}
