--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -1,4 +1,15 @@
+
+
+<div class="search">
+<%= form_tag posts_path, :method => 'get' do %>
+      <%= text_field_tag :search,  params[:search] %>
+      <div class="button">
+      <%= button_tag "Search", :name => nil %>
+      </div>
+<% end %>
+</div>
 <% @posts.each do |post| %>
+
 
     <blockquote>
 
