--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -82,45 +82,16 @@ nav ul li a:hover {
 /* Error messages */
 
 .field_with_errors {
-    margin-top: 10px;
-    padding: 2px;
-    background-color: red;
-    display: table;
+    display: inline;
 }
 
-.field_with_errors label {
-    color: #fff;
-}
-
-#error_explanation {
-    width: 400px;
-    border: 2px solid red;
-    padding: 7px;
-    padding-bottom: 12px;
-    margin-bottom: 20px;
-    background-color: #f0f0f0;
-}
-
-#error_explanation h2 {
-    text-align: left;
-    font-weight: bold;
-    padding: 5px 5px 5px 15px;
+.field_with_errors .message {
+    color: #D00;
+    padding-left: 5px;
     font-size: 12px;
-    margin: -7px;
-    background-color: #c00;
-    color: #fff;
 }
 
-#error_explanation p {
-    color: #333;
-    margin-bottom: 0;
-    padding: 5px;
-}
 
-#error_explanation ul li {
-    font-size: 12px;
-    list-style: square;
-}
  /* Users */
 ul.users {
     margin-top: 1em;
