--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,16 @@
 
-
-<div class="image_user">
-
-      <%= image_tag @user.image_url.to_s%>
-</div>
 <h5>
-  <%=@user.name %>
+ Profile, <%=@user.name %>
 </h5>
-<%= @user.email %>
+<div class="image_user">
+<%= image_tag @user.image_url.to_s%>
+</div>
+
+ <h5>Email:</h5> <%= @user.email %> <br/>
+<h5>Skype:</h5> <%= @user.skype %> <br/>
+<h5>Number phone:</h5> <%= @user.phone %> <br/>
+<h5>My Birthday:</h5> <%= @user.date_of_birth %> <br/>
+<h5>Town:</h5> <%= @user.town %> <br/>
+<h5>About me:</h5> <%= @user.about %> <br/>
+<%= render 'service/user_info' %>
+
