--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -82,16 +82,45 @@ nav ul li a:hover {
 /* Error messages */
 
 .field_with_errors {
-    display: inline;
+    margin-top: 10px;
+    padding: 2px;
+    background-color: red;
+    display: table;
 }
 
-.field_with_errors .message {
-    color: #D00;
-    padding-left: 5px;
+.field_with_errors label {
+    color: #fff;
+}
+
+#error_explanation {
+    width: 400px;
+    border: 2px solid red;
+    padding: 7px;
+    padding-bottom: 12px;
+    margin-bottom: 20px;
+    background-color: #f0f0f0;
+}
+
+#error_explanation h2 {
+    text-align: left;
+    font-weight: bold;
+    padding: 5px 5px 5px 15px;
     font-size: 12px;
+    margin: -7px;
+    background-color: #c00;
+    color: #fff;
 }
 
+#error_explanation p {
+    color: #333;
+    margin-bottom: 0;
+    padding: 5px;
+}
 
+#error_explanation ul li {
+    font-size: 12px;
+    list-style: square;
+}
  /* Users */
 ul.users {
     margin-top: 1em;
@@ -115,7 +144,13 @@ ul.users {
     height: 200px;
     margin-left: 10px;
 }
-
+.counter_comments{
+    margin-left: 390px;
+    color: #87ceeb;
+}
+.paginate{
+    margin-right: 240px ;
+}
 
 /* mini_profile */
 .image_mini_profile{
