--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -1,26 +1,11 @@
 
-
 <div class="search">
-<%= form_tag posts_path, :method => 'get' do %>
+<%= form_tag posts_path, :method => 'get',  do %>
       <%= text_field_tag :search,  params[:search] %>
       <div class="button">
       <%= button_tag "Search", :name => nil %>
       </div>
 <% end %>
 </div>
-<% @posts.each do |post| %>
 
-
-    <blockquote>
-
-      <em> Add <%= time_ago_in_words(post.created_at) %> ago.</em>
-
-      <p><%=link_to post.title, post,%></p>
-
-
-      <small><%= truncate(strip_tags(post.idea), length: 80)  %></small>
-
-
-    </blockquote>
-
-<% end %>
+<%= render :partial => 'posts' %>
