--- a/app/views/admin/admin.html.erb
+++ b/app/views/admin/admin.html.erb
@@ -4,7 +4,9 @@
   <small>Hence you can manage blog. </small>
   <%= link_to 'Add post', new_post_path %>  <br/>
   <%= link_to 'Users list', users_path %> <br/>
-  <%= link_to 'Your Asks', questions_path %>
+  <%= link_to 'Your Asks', questions_path %><br/>
+  <%= link_to 'Your Letters', letters_path %>
+
 
 
 
