--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,6 +11,17 @@
  *= require_self
  *= require_tree .
  */
+
+/* background */
+body {
+    background: url(2.jpg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+
  .containers{
      width: 850px;
      margin-left: 245px;
@@ -199,4 +210,60 @@ margin-left: 65px;
 .button{
     margin-top: -38px;
     margin-left: 225px;
+}
+/* image_gallery*/
+#gallery {
+
+}
+#gallery ul{
+    /* This position the ul content in the middle of the gallery*/
+    margin-left:-5px;
+}
+#gallery ul li {
+    /* In order to create the proper effect with hover we should use display inline-table
+        This will display the big picture right next to its thumbnail
+    */
+    list-style:none;
+    display:inline-table;
+    padding:10px;
+}
+#gallery ul li .pic{
+    /* Animation with transition in Safari and Chrome */
+    -webkit-transition: all 0.6s ease-in-out;
+    /* Animation with transition in Firefox (No supported Yet) */
+    -moz-transition: all 0.6s ease-in-out;
+    /* Animation with transition in Opera (No supported Yet)*/
+    -o-transition: all 0.6s ease-in-out;
+    /* The the opacity to 0 to create the fadeOut effect*/
+    opacity:0;
+    visibility:hidden;
+    position:absolute;
+    margin-top:10px;
+    margin-left:-20px;
+    border:1px solid black;
+    /*shadow box effect in Safari and Chrome*/
+    -webkit-box-shadow:#272229 2px 2px 10px;
+    /*shadow box effect in Firefox*/
+    -moz-box-shadow:#272229 2px 2px 10px;
+    /*shadow box effect in IE*/
+    filter:progid:DXImageTransform.Microsoft.Shadow(color='#272229', Direction=135, Strength=5);
+    /*shadow box effect in Browsers that support it, Opera 10.5 pre-alpha release*/
+    box-shadow:#272229 2px 2px 10px;
+}
+#gallery ul li .mini:hover{
+    cursor:pointer;
+    width: 100px;
+    height: 100px;
+}
+#gallery ul li:hover .pic {
+    /* width and height is how much the picture is going to growth with the effect */
+    width:300px;
+    height:300px;
+    opacity:1;
+    visibility:visible;
+    float:right;
+}
+#gallery .mini_tag{
+    width: 100px;
+    height: 100px;
 }
