--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>FamillyBlog</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
@@ -7,7 +8,10 @@
   <%= javascript_include_tag :defaults, "rails.validations" %>
   <%= csrf_meta_tags %>
 </head>
+
 <body>
+
+
 <div class="containers">
   <div class="row-fluid">
     <div class="span12">
@@ -19,7 +23,7 @@
               <a href="/">Home</a> <span class="divider">/</span>
             </li>
             <li>
-              <a href="#">Photo Gallery</a> <span class="divider">/</span>
+              <a href="/page/gallery">Photo Gallery</a> <span class="divider">/</span>
             </li>
             <li>
               <a href="/page/help">Help</a> <span class="divider">/</span>
@@ -62,6 +66,11 @@
                 </blockquote>
               </div>
           <% end %>
+          <% if signed_in? %>
+          <div class="well">
+            <a class="btn btn-warning" href="/letters/new">Write letter</a>
+            <% end %>
+          </div>
         </div>
       </div>
     </div>
