--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
+<!DOCTYPE html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <html>
 
 <head>
   <title>FamillyBlog</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+  <%= stylesheet_link_tag "http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/themes/redmond/jquery-ui.css", "application" %>
+  <%= javascript_include_tag "http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js", "http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.1/jquery-ui.min.js", "application" %>
+  <title><%= yield :title %></title>
   <%= javascript_include_tag :defaults, "rails.validations" %>
   <%= csrf_meta_tags %>
 </head>
