--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -14,11 +14,11 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :title %>
+    <%= f.label :title, "Название:" %>
     <%= f.text_field :title %>
   </div>
   <div class="field">
-    <%= f.label :idea %>
+    <%= f.label :idea, "Осоновной текст:" %>
     <%= f.text_area :idea, rows: 6 %>
   </div>
     <p>
