--- a/app/views/layouts/_navigate.html.erb
+++ b/app/views/layouts/_navigate.html.erb
@@ -16,6 +16,13 @@
 <li>
   <a href="/page/contact">Контакт</a><span class="divider">/</span>
 </li>
+<% if signed_in? %>
+    <% if current_user.admin? %>
+<li>
+  <a href="/admin">Aдминка</a><span class="divider">/</span>
+</li>
+<% end %>
+    <% end %>
 <li>
   <div class="search">
     <%= form_tag posts_path, :method => 'get' do %>
@@ -28,10 +35,10 @@
     <% end %>
   </div>
   <div class ="sort">
-    Сорторовать по:
+    Сортировать:
     <div class="btn-group" data-toggle="buttons-checkbox">
-      <%= link_to  "Популярности", posts_path, :class => 'btn btn-mini', :rel=>"tooltip", :title=>"Сортировать посты по популярности"%>
-      <%= link_to "По дате", page_path,  :class => 'btn btn-mini', :rel=>"tooltip", :title=>"Сортировать посты по дате добавления" %>
+      <%= link_to  "По популярности", posts_path, :class => 'btn btn-mini', :rel=>"tooltip", :title=>"Сортировать посты по популярности"%>
+      <%= link_to "По времени", page_path,  :class => 'btn btn-mini', :rel=>"tooltip", :title=>"Сортировать посты по дате добавления" %>
 
     </div>
   </div>
