--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,25 +3,39 @@
 <% @posts.each do |post| %>
 
 
-    <blockquote>
+    <div class="blocke">
 
-      <em><i class="  icon-time"></i> Add <%= time_ago_in_words(post.created_at) %> ago.</em>
-      <p><%=link_to post.title, post%></p>
+      <p class="muted"> <small><i class="icon-time"></i> Add <%= time_ago_in_words(post.created_at) %> ago</small> </p>
+
+      <strong><%= post.title%></strong>
 
 
-      <small><%= truncate(strip_tags(post.idea), length: 80)  %></small>
+      <p><%= truncate(strip_tags(post.idea), length: 80)  %></p>
+
       <div class = "counter_comments">
-        <%= pluralize post.comments.size, "" %> <i class=" icon-comment"></i> |
+
+
+        <%= pluralize post.comments.size, "",  %> <i class=" icon-comment"></i> |
         <%= pluralize post.reputation_for(:votes).to_i, "" %>  <i class=" icon-thumbs-up"></i>
+
       </div>
 
-    </blockquote>
+      <div class="link">
+        <p><%=  link_to "Читать дальше...", post %> </p>
+      </div>
+      <hr/>
+
+
+    </div>
+      <div class="link_delete">
     <% if signed_in? %>
-    <% if current_user.admin? %>
-        | <%= link_to "delete", post, :method => :delete, :confirm => "You sure?",
-                      :title => "Delete #{post.idea}" %>
-    <% end %>
+        <% if current_user.admin? %>
+            <%= link_to "Удалить", post, :method => :delete,
+                        :title => "Delete #{post.idea}" %>
         <% end %>
+    <% end %>
+      </div>
+
 <% end %>
     <% if signed_in? %>
 <% if current_user.admin? %>
