--- a/app/views/service/_local.html.erb
+++ b/app/views/service/_local.html.erb
@@ -1,9 +1,15 @@
 
+ <div class="heid_local"><div class="info_local"><p class="muted">Как меня найти:</p></div></div>
 
-  My accounts in social network:<br/>
-  <div class="socil">
-  <a href="http://www.vk.com" ><%= image_tag ("vk.png"), :size => '30x30'  %></a>
-  <a href="http://www.twitter.com" ><%= image_tag ("twitter.png"), :size => '28x28'  %></a>
-  <a href="http://www.facebook.com" ><%= image_tag ("facebook.jpg"), :size => '30x30'  %></a>
-  <a href="http://www.google.com" ><%= image_tag ("google.png"), :size => '28x28'  %></a>
+
+ <div class="socil">
+  <a href="http://vk.com/vitaleks" ><%= image_tag ("vk.png"), :size => '30x30'  %></a>
+  <a href="https://twitter.com/" ><%= image_tag ("twitter.png"), :size => '28x28'  %></a>
+  <a href="http://www.facebook.com/" ><%= image_tag ("facebook.jpg"), :size => '30x30'  %></a>
+  <a href="https://plus.google.com/" ><%= image_tag ("google.png"), :size => '28x28'  %></a>
   </div>
+ <% if signed_in? %>
+     <div class='button_local'>
+       <a class="btn btn-small" href="/letters/new"rel="tooltip" title="Напишыте мне письмо прямо сейчас!"><i class="icon-envelope"></i> Write letter</a> <br/>
+     </div>
+ <% end %>
