--- a/app/views/page/help.html.erb
+++ b/app/views/page/help.html.erb
@@ -1,1 +1,29 @@
-<h1> Help</h1>
+
+<%= render :partial => 'posts' %>
+<div class="modal" id="myModel">
+  <div class="modal-header">
+    <h3>Помощь</h3>
+  </div>
+  <div class="modal-body">
+    <p>1. Чтобы зарегистрироваться на сайте кликните   <strong><a href="/signup" > Создать профиль </a></strong> в левом верхнем углу. <br/>
+      Зарегистрированный пользователь может:<p/>
+    <ul>
+      <li>Оставлять комментарии</li>
+      <li>Оставлять анонимные вопросы</li>
+      <li>Оценивать статьи и комментарии</li>
+      <li>Надписи мне письмо</li>
+      <li>И многое другое</li>
+    </ul>
+    <p> 2. После регистрации и входа на сайт у вас появляется ваш "Мини профиль" где вы можете просмотреть свою страницу кликнув кнопку "Профиль", а также изменить и добавить больше информации о себе кликнув "Настройки".</p>
+    <p> 3.<strong> <%= link_to 'Фотогалерея', galleries_path %></strong> позволяет просматривать мои альбомы и фотографии.</p>
+     <p> 4. В блоке  <strong> <%= link_to 'Вопросы', questions_path %></strong> вы можете посмотреть анонимные вопросы заданные другими пользователями а также мои ответы на них и конечно сами можете задать любой анонимный вопрос.</p>
+     <p> 5. Блок сортировки позволяет сортировать статьи по дате добавления и по популярности (т.е. по количеству "понравилось")</p>
+      <p>6. С помощью поиска вы всегда сможете найти любую статью.</p>
+     <p> 7. В блоке "Связь" вы можете видеть информацию обо мне а также написать письмо, задать мне анонимний вопрос и пересмотреть мой профиль.</p>
+
+  </div>
+  <div class="modal-footer">
+    <a href="/" class="btn">Закрыть</a>
+
+  </div>
+</div>
