--- a/app/views/page/services.html.erb
+++ b/app/views/page/services.html.erb
@@ -2,12 +2,11 @@
 
 <div class="modal" id="myModel" xmlns="http://www.w3.org/1999/html">
   <div class="modal-header">
-    <h3>О проекте</h3>
+    <h3>Мои услуги</h3>
   </div>
   <div class="modal-body">
-   <p> Добро пожаловать в мой блог.  </p>
+    <p> Разработка эффективных сайтов  – это сложный труд, требующий много времени и сил. Высокое качество стоит денег, времени и внимания, и создание сайтов не является исключением из этого правила.  </p>
 
-   <p> Блог разработан на <strong>Ruby on Rails 3</strong> с использованием фреймоврка <strong>Twitter-bootstrap</strong>, а также <strong>Javascript</strong>.</p>
     <p>Если вам понравился мой блог и вы заинтересовны в моих услугах вы можете <strong><a href="/signup" > Зарегистрироватся и связаться сомной. </a></strong></p>
     <blockquote class="pull-right">
 
