--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -32,7 +32,7 @@
 
 
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Добвать пост", :class => 'btn btn-small' %>
   </div>
 <% end %>
 <% else %>
