--- a/app/views/service/_form_comments.html.erb
+++ b/app/views/service/_form_comments.html.erb
@@ -1,14 +1,15 @@
 
 <% if signed_in? %>
     <div class="form_comment">
-
+    <div class="field">
     <%= form_tag controller: "comments", actions: "create", :remote => true do %>
 
           <%= text_area_tag :content, "", size: '100x5' %>
 
         <%= text_field_tag :post_id, @post.id, style: "display: none;" %><br/>
-        <%= submit_tag "add comment" %>
+        <%= submit_tag "Добавить коментарий", :class => 'btn btn-small' %>
     <% end %>
+    </div>
     </div>
 <% else %>
     <div class="alert alert-error">
