--- a/app/views/layouts/_admin_sector.html.erb
+++ b/app/views/layouts/_admin_sector.html.erb
@@ -11,7 +11,7 @@
    </div>
    <% else %>
        <div class="info_admin_sector">
-         <p class="text-error"> ► Авторизуйтесь чтобы видить больше информации!</p>
+         <p class="text-error"> ► Авторизуйтесь чтобы видеть больше информации!</p>
        </div>
 
        <% end %>
@@ -39,7 +39,7 @@
 
           <a href="/users/1">
             <i class="icon-user"></i>
-            Моя страниця
+            Моя страница
           </a>
         </p>
 
