--- a/app/views/service/_form_comments.html.erb
+++ b/app/views/service/_form_comments.html.erb
@@ -1,4 +1,6 @@
-
+<div class="info_admin_sector">
+  <p class="text-error"> ► Ваш комментарий должен содержать не более 200 символов!</p>
+</div>
 <% if signed_in? %>
     <div class="form_comment">
     <div class="field">
